change image Address

--- a/Slider/Slider.html
+++ b/Slider/Slider.html
@@ -14,16 +14,16 @@
         <div id="slider" class="wrapper">
             <div id="slides">
                 <div class="slide1">
-                    <img src="/Slideimage/1.jpg" />
+                    <img src="Slideimage/1.jpg" />
                 </div>
                 <div class="slide2">
-                    <img src="/Slideimage/2.jpg" />
+                    <img src="Slideimage/2.jpg" />
                 </div>
                 <div class="slide3">
-                    <img src="/Slideimage/3.jpg" />
+                    <img src="Slideimage/3.jpg" />
                 </div>
                 <div class="slide4">
-                    <img src="/Slideimage/4.jpg" />
+                    <img src="Slideimage/4.jpg" />
                 </div>
                 <!-- <div class="slide">
                     <img src="/Slideimage/1.jpg" />
